# block

./: .env.example  .env.production.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci-cd.yml
backend/: railway.toml
backend/server/: Cargo.toml  Dockerfile
backend/server/fuzz/: Cargo.toml
backend/server/fuzz/fuzz_targets/: auth_input.rs  board_input.rs  element_input.rs  jwt_verify.rs  ws_message.rs
backend/server/migrations/: 20250512000000_init.sql
backend/server/src/: config.rs  lib.rs  main.rs  test_support.rs  ws_protocol.rs
backend/server/src/application/: auth.rs  board.rs  mod.rs
backend/server/src/domain/: error.rs  mod.rs  models.rs  repository.rs
backend/server/src/infrastructure/: jwt.rs  mod.rs  password.rs  repositories.rs
backend/server/src/presentation/: error.rs  mod.rs  rooms.rs  routes.rs  state.rs  ws.rs
backend/server/tests/: role_access.rs
frontend/: .env.example  Dockerfile  nginx.static.conf  package-lock.json  package.json  railway.toml  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  auth-context.ts  auth.tsx  boardHitTest.ts  index.css  types.ts  useAuth.ts
frontend/src/pages/: BoardPage.tsx  BoardsPage.tsx  LoginPage.tsx  RegisterPage.tsx
proxy/: Dockerfile  docker-entrypoint.sh  nginx.conf  nginx.conf.template  railway.toml
scripts/: build-git-history.sh  deploy-remote.sh  railway-seed.sh
