[package]
name = "board_server-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
board_server = { path = ".." }
libfuzzer-sys = "0.4"

[[bin]]
name = "ws_message"
path = "fuzz_targets/ws_message.rs"
test = false
doc = false
bench = false

[[bin]]
name = "jwt_verify"
path = "fuzz_targets/jwt_verify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "auth_input"
path = "fuzz_targets/auth_input.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]

# cargo-fuzz по умолчанию собирает с --release, но можно явно усилить оптимизацию
[profile.release]
opt-level     = 3
lto           = "thin"   # thin-LTO — хороший баланс скорости сборки и качества кода
codegen-units = 1
